[gd_scene load_steps=9 format=3 uid="uid://bm5ljdow8cbfk"]

[ext_resource type="Script" uid="uid://bs52qneqrk41e" path="res://scripts/bridge.gd" id="1_1q54l"]
[ext_resource type="Texture2D" uid="uid://ddtwrmhncvcdj" path="res://tileset/Tilesheetv1.png" id="1_7ct4w"]
[ext_resource type="Script" uid="uid://buno5pkjjq2c0" path="res://scripts/interactable.gd" id="2_im2sa"]

[sub_resource type="Animation" id="Animation_im2sa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5707964]
}

[sub_resource type="Animation" id="Animation_7ct4w"]
resource_name = "clos"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5707964, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1q54l"]
_data = {
&"RESET": SubResource("Animation_im2sa"),
&"close": SubResource("Animation_7ct4w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_im2sa"]
size = Vector2(80, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1q54l"]
size = Vector2(12, 48)

[node name="Bridge" type="AnimatableBody2D"]
script = ExtResource("1_1q54l")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5707964
texture = ExtResource("1_7ct4w")
centered = false
region_enabled = true
region_rect = Rect2(64, 0, 48, 11)

[node name="PivotAnimation" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_1q54l")
}

[node name="CollisionShapeClosed" type="CollisionShape2D" parent="."]
position = Vector2(24, 5.5)
shape = SubResource("RectangleShape2D_im2sa")
disabled = true

[node name="CollisionShapeOpened" type="CollisionShape2D" parent="."]
position = Vector2(5.5000005, -40)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_im2sa")

[node name="BridgeClosingTimer" type="Timer" parent="."]
one_shot = true

[node name="Interactable" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 0
script = ExtResource("2_im2sa")
text = "\"F\""
metadata/_custom_type_script = "uid://buno5pkjjq2c0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(-6, -24)
shape = SubResource("RectangleShape2D_1q54l")

[connection signal="timeout" from="BridgeClosingTimer" to="." method="_on_bridge_closing_timer_timeout"]
